--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="D:\Hari\Web Development\The Complete 2023 Web Development Bootcamp\002 - Introduction to HTML\20 - fake-human-circle-
-img.png" alt="Harigovind image">
+            <td><img src="25-11-2020 (1).jpg" alt="Harigovind image">
             </td>
             <td>
                 <h1>Harigovind SR</h1>
