--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="25-11-2020 (1).jpg" alt="Harigovind image">
+            <td><img src="25-11-2020 (1)-modified.png" alt="Harigovind image">
             </td>
             <td>
                 <h1>Harigovind SR</h1>
